# KGG_CPP_Project_Repo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Include/Math/: Matrix3.hpp
Include/Scene/: Camera.h
Light/: Normal.hpp
Math/: Vector2.hpp  Vector3.hpp  Vector4.hpp  main.cpp  test  tst
Test/: Test_Normals.cpp
headers/: Render.h
headers/math/: Math.hpp
include/Light/: Normal.hpp
include/Math/: MConcepts.hpp  Matrix4.hpp  Vector3.hpp
include/Render/: Rasterizer.h  Render.h
include/Window/: Color.hpp  Framebuffer.h
include/math/: Math.hpp  Vector4.hpp
src/Headers/: glad.h
src/Light/: Normal.cpp  Render.cpp
src/Main/: main.cpp
src/Main/Math/: Matrix4.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  main.cpp
src/Main/Window/: Window.cpp
src/Render/: Mesh.cpp  Rasterizer.cpp  Render.cpp  shader.cpp
src/Scene/: Camera.cpp
src/UI/: Button.cpp
src/Window/: Framebuffer.cpp  Window.cpp
src/app/: main.cpp
src/main/: main.cpp
src/main/light/: Mesh.cpp  Normal.cpp  shader.cpp
src/main/math/: Matrix4.hpp
src/main/window/: Window.cpp
test/: Test_Normals.cpp
